# sandbox

./: .clang-format  .gitignore
QT/: mainwin.py  prog.py  rightcontrol.py
QT/numbers/: gui_communicator.py  main.py  mainwin.py  prog.py  rightcontrol.py  run_tests.py  tester.py  tests.py
QT/pict/: .gitignore  actions.py  box.py  boxgritem.py  boxsettings.py  build.py  build_executable.py  build_installer.py  create_win_inst.py  drawstate.py  imageviewer.py  main.py  mainwin.py  make_installer.nsi  model.py  qt_common.py  readme.txt  rightcontrol.py  scene.py  setup.py  state.py  table.py  tableviewer.py  viewer.py
algos/integer_sequence/: CMakeLists.txt  is.hpp  main.cpp
algos/slice/: CMakeLists.txt  main.cpp  slice.hpp
algos/tuple/: CMakeLists.txt  main.cpp  tuple_algos.hpp
algos/wint/: CMakeLists.txt  main.cpp  wint.hpp
clife/: CMakeLists.txt  clangformat.py
clife/prog/: arguments.cpp  arguments.hpp  board.cpp  board.h  game.cpp  game.h  main.cpp
clock/: .gitignore  augmenter.py  custom_loss.py  customs.py  new_train.py  npy_vs_folder.ipynb  prepare.py  resize_pic.py  screenshot.py  study.py  take_photo.py  train.py  validate.ipynb
cppcontainer/: Dockerfile  howto.txt
cppcontainer/cpp/: a.cpp  start.sh
csin/: b.py  b_model.h5  Новая таблица (1).xlsx
curvefitting/: a.py  epochsresults.txt  mseresults.txt  Новая таблица.xlsx
faster_rcnn_test/: .gitignore  common_func.py  detect_onnx.py  detect_tf.py  download_coco.py  map.py  save_predict.py
flask/: howto.txt
flask/opensuseflaskdir/: dockerfile  index.html  server.py
graph/: CMakeLists.txt  functional_nodes.cpp  functional_nodes.hpp  graph.cpp  graph.hpp  main.cpp  op.cpp  tests.cpp
graph/lib/: CMakeLists.txt  arithmetic_nodes.cpp  arithmetic_nodes.hpp  arithmetic_op.cpp  arithmetic_op.hpp  data_node.cpp  data_node.hpp  generator.cpp  generator.hpp  graph.cpp  graph.hpp  i_functional_node.cpp  i_functional_node.hpp  i_functions_node.cpp  i_functions_node.hpp  i_node.cpp  i_node.hpp  input_node.cpp  input_node.hpp  model.cpp  model.hpp  optimization_worker.cpp  optimization_worker.hpp  optimizer.cpp  optimizer.hpp  power_nodes.cpp  power_nodes.hpp  power_op.cpp  power_op.hpp  tensor.cpp  tensor.hpp  tensor_index.cpp  tensor_index.hpp  training_graph.cpp  training_graph.hpp  trigonometric_nodes.cpp  trigonometric_nodes.hpp
graph/pybind/: CMakeLists.txt  pybind_graph_pr.cpp  readme.md  run_py_tests.bat
graph/pybind/tests/: tests.py
graph/python/: CMakeLists.txt  bindings.cpp
graph/python/tests/: tests.py
graph/tests/: CMakeLists.txt  curve_fitting_test.cpp  generator_test.cpp  main.cpp  model_test.cpp  serialize_test.cpp  tensor_test.cpp  tests.cpp
img_classification/: .gitignore  a.py  augmenter.py  b.py  best_model1.keras  c.py  d.py  new_best_model1.keras
life/: CMakeLists.txt  board.cpp  board.hpp  clangformat.py  display.cpp  display.hpp  file.txt  game.cpp  game.hpp  main.cpp  simlife.cpp  simlife.hpp
life/lib/: CMakeLists.txt  board.cpp  board.hpp  cmd_viewer.hpp  driver.cpp  driver.hpp  i_engine.hpp  i_viewer.hpp  life_engine.cpp  lifelib.hpp  simlife_c_api.cpp  simlife_c_api.h  simlife_utils.hpp
life/prog/: CMakeLists.txt  arguments.cpp  arguments.hpp  board.cpp  board.hpp  cboard.cpp  cboard.h  game.cpp  game.hpp  global.hpp  igame.cpp  igame.h  main.cpp  optargs.cpp  optargs.hpp  simlife_utils.cpp  simlife_utils.hpp
life/prog/headers/: board.hpp  cmd_viewer.hpp  driver.hpp  i_engine.hpp  life_engine.hpp  reg_engine.hpp  viewer.hpp
life/prog/sources/: cmd_viewer.cpp  driver.cpp  main.cpp  reg_engine.cpp
life/prog/tests/: tests.cpp
life/src/: board.cpp  board.hpp  game.cpp  game.hpp  main.cpp
life/tests/: CMakeLists.txt  c_api_tests.cpp  main.cpp  tests.cpp
linkparse/: CMakeLists.txt  a.cpp
lstm/: a.py  train.ipynb
mpi/: Application6.cpp  Application6.sln  Application6.vcxproj  CMakeLists.txt  Makefile  how.txt  howto.txt  mpi_slae.xlsx  timer.cpp  timer.hpp  Текстовый документ.txt
picparse/: CMakeLists.txt  a.cpp  http_response.cpp  http_response.hpp
ros2/: .gitignore  Dockerfile  docker-compose.yaml  howto.txt
ros2/core_utils/: CMakeLists.txt  package.xml
ros2/core_utils/src/: CMakeLists.txt  core_utils.cpp  core_utils.hpp  fmt_format.hpp
ros2/core_utils/src/core_utils/: core_utils.cpp
ros2/core_utils/src/include/: core_utils.hpp
ros2/core_utils/src/src/: core_utils.cpp
ros2/core_utils/test/: CMakeLists.txt  main.cpp  test_fmt_format.cpp
ros2/mouse_control/: .gitignore  package.xml  setup.py
ros2/mouse_saver/: CMakeLists.txt  package.xml
ros2/mouse_saver/config/: config.yaml
ros2/mouse_saver/mouse_control/: mouse_saver.cpp
ros2/mouse_sensor/: package.xml  setup.cfg  setup.py
ros2/sensor_saver/: CMakeLists.txt  package.xml
ros2/sensor_saver/config/: config.yaml
ros2/sensor_saver/include/sensor_saver_impl/: sensor_saver_impl.hpp
ros2/sensor_saver/launch/: sensor_saver.launch.py
ros2/sensor_saver/src/: CMakeLists.txt  sensor_saver_impl.cpp  sensor_saver_impl.hpp  sensor_saver_node.cpp
ros2/sensor_saver/src/sensor_saver_impl/: CMakeLists.txt  sensor_saver_impl.cpp  sensor_saver_impl.hpp
ros2/sensor_saver/src/sensor_saver_impl/src/: sensor_saver_impl.cpp
ros2/sensor_saver/src/sensor_saver_node/: CMakeLists.txt  sensor_saver_node.cpp
ros2/sensor_saver/test/: CMakeLists.txt  main.cpp  mouse_sensor_test.cpp  test_ttl.cpp
ssh_container/: howto.txt  result.txt
ssh_container/alpine/: dockerfile  start.sh
ssh_container/opensuse/: dockerfile
templates/: CMakeLists.txt  main.cpp  multiply.hpp  newmain.cpp  numtostring.hpp  point.hpp  pow.hpp
templates/numtostring/: CMakeLists.txt  hundreds.hpp  long_scale_nums.hpp  num_impl.hpp  numimpl.hpp  numtostring.cpp  numtostring.hpp  numtostringimpl.hpp  short_scale_nums.hpp
templates/ratio/: CMakeLists.txt  (+2 more)
templstes/: CMakeLists.txt  main.cpp  numtostring.hpp
threadpool/: application.cpp  application.sln  application.vcxproj  timer.cpp  timer.h
tuple/: main.cpp  tuple_algos.hpp
world/: config.py  draw.py  entity.py  main.py  web_server.py  world.html  world.py
(+34 files in other folders)
