<?xml version="1.0"?>
<package format="3">
  <name>mouse_saver</name>
  <version>0.0.0</version>
  <description>C++ mouse subscriber package</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>libpqxx</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>